--- a/primer/style.css
+++ b/primer/style.css
@@ -1,32 +1,61 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+
+
+
+body {
+    height: 100vh;
+    overflow: hidden;
+    display : flex;
+    flex-direction: column;
+    font-family: Roboto, sans-serif;
+    margin: 5px 0px;
+}
+
+
 body{
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
 }
 
-label{
-    display:inline-block;
-    width:300px;
-    margin-left:10%;
-    margin-top:20px;
+
+.navbar {
+    display: flex;
+    justify-content: left;
+    gap: 20px;
+    align-items: flex-start;
 }
 
-input{
-    display:inline-block;
-    width:350px;
-    margin-top:20px;
-    font-size: 15px;
+label {
+    display: inline-block;
+    width: 270px;
+    margin-left: 10%;
+}
+
+input {
+    display: inline-block;
+    border: 0.5px solid #ddd;
+    width: 250px;
+    padding: 5px;
+    margin-top: 8px;
+    
+}
+
+.containerAll {
+    display: flex;
+    justify-content: center;
+    padding-top: 40px;
+    padding-left: 5%;
+    padding-right:5%;
 }
 
 .containerButton{
     display:flex;
     justify-content:center;
     align-content:center;
-    padding-top:20px;
+    height:auto;
+    padding-right:5%;
+    margin-top:8px;
 }
-
-button{
-    font-size: 15px;
-}
-
 
 
